fix: scroll on mobile

--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -7,9 +7,10 @@ nav {
   align-items: center;
   padding: 0.5rem;
   position: fixed;
+  top: 0;
   width: 100%;
   height: 55px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .logo__title-wrapper {
